# rust-web

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  clippy.toml  index.html  rustfmt.toml  zerops.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: main.css
data/: cards.json
src/: data.rs  main.rs
src/components/: card_art.rs  card_view.rs  hero.rs  mod.rs  nav.rs  zoom.rs
src/data/: cards.rs  mod.rs  packs.rs  snippets.rs  types.rs
