[package]
name = "rust-web-tcg"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
tokio-tungstenite = "0.26.1"

[features]
default = ["fullstack"]
fullstack = ["dioxus/fullstack"]
